# learnedbench

./: .gitignore  CMakeLists.txt  README.md  log
bench/: bench.cpp  bench_box.cpp  bench_flood.cpp  bench_join.cpp  bench_octree.cpp  bench_rmi.cpp  bench_rsmi.cpp  bench_rsmi_update.cpp  bench_update.cpp  bench_workload.cpp  log  query.hpp  query_box.hpp  query_update.hpp  query_workload.hpp  test.cpp
indexes/learned/: ifindex.hpp  lisa2.hpp  main.cpp  mlindex.hpp  rsmi.hpp
indexes/nonlearned/: Octree.hpp  kdtree.hpp  main.cpp  nonlearned_index.hpp
indexes/revision-box/: CMakeLists.txt  OctreeBox.hpp  equal_depth_gridBox.hpp  geosBox.hpp  main.cpp  nonlearned_index.hpp  uniform_gridBox.hpp
indexes/revision-flood/: Makefile  floodOct.hpp  log  main.cpp
indexes/revision-rmi/: flood.hpp  floodOct.hpp  learned_index.hpp  lisa2.hpp  main.cpp  mlindex.hpp
indexes/revision-update/: Octree.hpp  base_index.hpp  equal_depth_grid.hpp  ifindex.hpp  kdtree.hpp  learned_index.hpp  lisa.hpp  lisa2.hpp  main.cpp  nanoflann.hpp  nonlearned_index.hpp  rsmi.hpp  rtree.hpp  uniform_grid.hpp
indexes/revision-workload/: flood.hpp
scripts/: data_generator.py  prepare_box.sh  prepare_data.sh  rsmi.sh  run_exp.sh  run_exp_box.sh  run_exp_flood.sh  run_exp_join.sh  run_exp_join_qdtree.sh  run_exp_join_rsmi.sh  run_exp_kdtree.sh  run_exp_octree.sh  run_exp_pgm.sh  run_exp_qdtree.sh  run_exp_rmi.sh  run_exp_update.sh  run_exp_update_kdtree.sh  run_exp_update_rsmi.sh  run_exp_workload.sh  show_box.sh
utils/: boxgen.cpp  boxshow.cpp  common.hpp  datautils.hpp  type.hpp
(+16 files in other folders)
